# cargo-prepost

./: Cargo.toml  LICENSE  README.md
examples/println/: Cargo.toml
examples/println/prepost/: postrun.rs  prerun.rs  pretest
examples/with_deps/: Cargo.toml
examples/with_deps/prepost/: Cargo.toml  postrun.rs
src/: cargo_utils.rs  lib.rs  prepost_utils.rs
