[package]
name = "cargo-prepost"
version = "0.1.0"
edition = "2024"

[dependencies]
cargo_metadata = "0.21.0"
clap = { version = "4.5.42", features = ["derive"] }
log = "0.4"
simple_logger = { version = "5", features = ["stderr"] }
tempfile = "3.20.0"
toml = "0.9.4"
# cargo = { version = "0.89.0", features = ["all-static"]}
